# m_py_study4

./: .gitignore  README.md
backend/: .pre-commit-config.yaml  app.py  pyproject.toml
backend/api/: __init__.py  endpoint.py
backend/api/modules/: __init__.py
backend/api/modules/nlp/: __init__.py  text_classifier.py
backend/docker/: Dockerfile  docker-compose.yaml
frontend/docker/: Dockerfile  docker-compose.yaml
