[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Lucky <phatbowie@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
scikit-learn = "^0.22.0"
responder = "^2.0"
mecab2pandas = "^0.2.1"

[tool.poetry.dev-dependencies]
flake8 = "^3.7"
isort = "^4.3"
pre-commit = "^1.20"
black = "^19.10b0"
mypy = "^0.761.0"

[tool.black]
line-length = 100
target-version = ["py37"]
exclude = '''
(
  \.eggs
  | \.git
  | \.mypy_cache
  | \.pytest_cache
  | dist
)
'''

[tool.isort]
include_trailing_comma = true
line_length = 100
multi_line_output = 3

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
